# sub-convert

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile-rocm  LICENSE.pgsrip_original  README.md  install-base.sh  install-cuda.sh  install-macos.sh  install-openvino.sh  install-rocm.sh  main.py  media.py  memray-flamegraph-main.py.24554.html  memray-flamegraph-main.py.24554.html.REMOVED.git-id  memray-main.py.24554.bin.REMOVED.git-id  mkdocs.yml  model_core.py  pgs.py  pgs_manager.py  pgs_subtitle_item.py  pyproject.toml  reproduce.py  requirements-external.txt  requirements.txt  subtitle_group.py  subtitle_track_manager.py  utils.py  uv.lock.REMOVED.git-id  workers.py  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  pylint.yml  ruff-pytest.yml  ruff.yml
debug/: debug.ipynb  debug.ipynb.REMOVED.git-id
debug/4430ca/: 4430ca.json
docs/: index.md  pgs.md  quick-start.md
docs/design/model/: language_model_core.md  ocr_model_core.md  workers.md
docs/design/pgs/: pgs_manager.md  pgs_segments.md  pgs_subtitle_item.md
docs/design/subtitle/: subtitle_group.md  subtitle_track_manager.md
src/: setup.py
src/model/: language_model_core.py  model_core.py  ocr_model_core.py  workers.py
src/pgs/: pgs_manager.py  pgs_segments.py  pgs_subtitle_item.py
src/sub_convert/: __main__.py  cli.py
src/subtitle/: subtitle_group.py  subtitle_track_manager.py  timeline.py
src/utils/: torch_utils.py  utils.py
tests/: requirements.txt  test_main.py  test_pgs.py  test_subtitle_group.py  test_utils.py
tests/files/for-pgs/: test.7z  (+1 more)
(+9 files in other folders)
